# fgo-gan

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  add.c  cmake_install.cmake  common.c  main.c  pic.c
action/: 弓凛.txt
part/: add.h  add_r.h  common.h  config.h  head.h  main.h  pic.h  pic_r.h  resource.h
source/: add.rc  main.rc  pic.rc
