project(FgoAuto)
# set(OpenCV_DIR D:/mod/opencv/opencv/build_mingw)
list(APPEND CMAKE_PREFIX_PATH D:/mod/opencv/opencv/build_mingw)
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV Dir = ${OpenCV_DIR}")
message(STATUS "OpenCV Include = ${OpenCV_INCLUDE_DIRS}")
message(STATUS "OpenCV Lib = ${OpenCV_LIBS}")
aux_source_directory(. SRC_CUR)
file(GLOB SRC_OBJ ./obj/*.o)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(part)
add_executable(FgoAuto WIN32 ${SRC_CUR} ${SRC_OBJ})
target_link_libraries(FgoAuto ${OpenCV_LIBS} gdi32)